--- a/TugasJs5.html
+++ b/TugasJs5.html
@@ -23,6 +23,8 @@
           <img src="css/one piece.jpg" class="gambar" />
           <img src="css/allah.jpg" class="gambar" />
           <img src="css/allah.png" class="gambar" />
+	  <img src="https://media.giphy.com/media/TBBdvuB0JV9PpdIgB2/giphy.gif" class="gambar" />
+	
 	<script>
 		$(document).ready(function() {
 			$('.gambar').click(function() {
